Copy conf2uedata, nvram, usim to top level build directory for backwards compat

--- a/openair3/NAS/CMakeLists.txt
+++ b/openair3/NAS/CMakeLists.txt
@@ -28,9 +28,30 @@ target_include_directories(CONF2UEDATA_LIB PRIVATE
 
 add_executable(conf2uedata TOOLS/conf2uedata.c)
 target_link_libraries(conf2uedata PRIVATE CONF2UEDATA_LIB config)
+# copies conf2uedata to top-level build directory for backwards compatibility
+add_custom_command(
+  TARGET conf2uedata POST_BUILD
+  COMMAND cmake -E copy conf2uedata ${CMAKE_BINARY_DIR}/
+  COMMENT "copy conf2uedata to top-level build directory"
+  VERBATIM
+)
 
 add_executable(usim TOOLS/usim.c)
 target_link_libraries(usim PRIVATE CONF2UEDATA_LIB config)
+# copies usim to top-level build directory for backwards compatibility
+add_custom_command(
+  TARGET usim POST_BUILD
+  COMMAND cmake -E copy usim ${CMAKE_BINARY_DIR}/
+  COMMENT "copy usim to top-level build directory"
+  VERBATIM
+)
 
 add_executable(nvram TOOLS/nvram)
 target_link_libraries(nvram PRIVATE CONF2UEDATA_LIB config)
+# copies nvram to top-level build directory for backwards compatibility
+add_custom_command(
+  TARGET nvram POST_BUILD
+  COMMAND cmake -E copy nvram ${CMAKE_BINARY_DIR}/
+  COMMENT "copy nvram to top-level build directory"
+  VERBATIM
+)
