add SMVB convertion tool and one old bug fix in command line processing discovered while testing

--- a/cmake_targets/CMakeLists.txt
+++ b/cmake_targets/CMakeLists.txt
@@ -2871,6 +2871,11 @@ add_executable(replay_node
   )
 target_link_libraries (replay_node minimal_lib)
 
+add_executable(convertSMVB
+  ${OPENAIR_TARGETS}/ARCH/rfsimulator/convert_SMVB.c
+  )
+target_link_libraries (convertSMVB minimal_lib)
+
 add_executable(measurement_display
   ${OPENAIR_DIR}/common/utils/threadPool/measurement_display.c)
 target_link_libraries (measurement_display minimal_lib)
@@ -3496,7 +3501,7 @@ if (${T_TRACER})
         PHY_COMMON PHY PHY_UE PHY_NR PHY_NR_COMMON PHY_NR_UE PHY_RU PHY_MEX
         L2 L2_LTE L2_NR L2_LTE_NR L2_UE NR_L2_UE L2_UE_LTE_NR MAC_NR_COMMON MAC_NR MAC_UE_NR NGAP_GNB
         CN_UTILS ${GTPV1U} SCTP_CLIENT MME_APP UDP LIB_NAS_UE NB_IoT LFDS LFDS7 SIMU_COMMON SIMU SIMU_ETH OPENAIR0_LIB
-        ldpc_orig ldpc_optim ldpc_optim8seg ldpc PROTO_AGENT dfts)
+        ldpc_orig ldpc_optim ldpc_optim8seg ldpc PROTO_AGENT dfts )
     if (TARGET ${i})
       add_dependencies(${i} generate_T)
     endif()
