--- a/targets/PROJECTS/GENERIC-LTE-EPC/CONF/testing_gnb.conf
+++ b/targets/PROJECTS/GENERIC-LTE-EPC/CONF/testing_gnb.conf
@@ -71,8 +71,10 @@ gNBs =
              initialDLBWPstartSymbolAndLength_1  = 53;
 
              initialDLBWPk0_2                    = 0;
+             
              initialDLBWPmappingType_2           = 0;
-             #this is SS=1,L=12 
+            #this is SS=1,L=12 
+            
              initialDLBWPstartSymbolAndLength_2  = 54;
 
              initialDLBWPk0_3                    = 0;
@@ -188,7 +190,7 @@ gNBs =
       nrofUplinkSlots                                               = 2;
       nrofUplinkSymbols                                             = 4; //0; //4;
 
-  ssPBCH_BlockPower                                             = -25;
+  ssPBCH_BlockPower                                             = -15;
   }
 
   );
@@ -207,6 +209,7 @@ gNBs =
     mme_ip_address      = ( { ipv4       = "192.168.18.99";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
+                              port       =  36412;
                               preference = "ipv4";
                             }
                           );
@@ -250,7 +253,7 @@ L1s = (
     	{
 	num_cc = 1;
 	tr_n_preference = "local_mac";
-	pusch_proc_threads = 8;
+	pusch_proc_threads = 6;
         }  
 );
 
@@ -263,9 +266,10 @@ RUs = (
          att_rx         = 0;
          bands          = [7];
          max_pdschReferenceSignalPower = -27;
-         max_rxgain                    = 114;
+         max_rxgain                    =75;
          eNB_instances  = [0];
-         clock_src = "external";
+         sdr_addrs ="addr=192.168.80.50";
+         clock_src = "internal";
     }
 );  
 
@@ -279,17 +283,17 @@ THREAD_STRUCT = (
   }
 );
 
-security = {
+  #security = {
   # preferred ciphering algorithms
   # the first one of the list that an UE supports in chosen
   # valid values: nea0, nea1, nea2, nea3
-  ciphering_algorithms = ( "nea0", "nea2" );
+  #ciphering_algorithms = ( "nea0", "nea2" );
 
   # preferred integrity algorithms
   # the first one of the list that an UE supports in chosen
   # valid values: nia0, nia1, nia2, nia3
-  integrity_algorithms = ( "nia0" );
-};
+ # integrity_algorithms = ( "nia0" );
+#};
 
      log_config :
      {
@@ -308,4 +312,6 @@ security = {
        rrc_log_level                         ="info";
        rrc_log_verbosity                     ="medium";
     };
-
+uicc: {
+  opc = "testopc";
+};
