nr pdcp benchmarking: add skeleton optimized source files
Functions inside are to be filled with optimized versions of
ciphering and integrity. The program bench_optimized can be used
to test. (Note: other measures of computation time are possible,
this is just an example.)

--- a/openair2/LAYER2/nr_pdcp/bench/Makefile
+++ b/openair2/LAYER2/nr_pdcp/bench/Makefile
@@ -4,8 +4,16 @@ CFLAGS=-Wall -g -I.
 OBJS=bench.o nr_pdcp_entity.o nr_pdcp_integrity_nia2.o nr_pdcp_security_nea2.o \
      nr_pdcp_sdu.o
 
+OBJS_optimized=bench.o nr_pdcp_entity.o nr_pdcp_integrity_nia2_optimized.o \
+     nr_pdcp_security_nea2_optimized.o nr_pdcp_sdu.o
+
+all: bench bench_optimized
+
 bench: $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $(OBJS) -lcrypto -lnettle
+
+bench_optimized: $(OBJS_optimized)
+	$(CC) $(CFLAGS) -o $@ $(OBJS_optimized) -lcrypto -lnettle
 
 %.o: ../%.c
 	$(CC) $(CFLAGS) -c -o $@ $<
@@ -14,4 +22,4 @@ bench: $(OBJS)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
-	rm -f bench $(OBJS)
+	rm -f bench $(OBJS) bench_optimized $(OBJS_optimized)
