band 257 config update

--- a/targets/PROJECTS/GENERIC-LTE-EPC/CONF/gnb.band257.tm1.32PRB.usrpn300.conf
+++ b/targets/PROJECTS/GENERIC-LTE-EPC/CONF/gnb.band257.tm1.32PRB.usrpn300.conf
@@ -39,7 +39,7 @@ gNBs =
       absoluteFrequencySSB                                          = 2071241;
       dl_frequencyBand                                                 = 257;
       # this is 27.900 GHz
-      dl_absoluteFrequencyPointA                                       = 2070833;
+      dl_absoluteFrequencyPointA                                       = 2070857;
       #scs-SpecificCarrierList
         dl_offstToCarrier                                              = 0;
 # subcarrierSpacing
@@ -54,7 +54,7 @@ gNBs =
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120  
         initialDLBWPsubcarrierSpacing                                           = 3;
       #pdcch-ConfigCommon
-        initialDLBWPcontrolResourceSetZero                                      = 12;
+        initialDLBWPcontrolResourceSetZero                                      = 0;
         initialDLBWPsearchSpaceZero                                             = 0;
       #pdsch-ConfigCommon
         #pdschTimeDomainAllocationList (up to 16 entries)
@@ -68,7 +68,7 @@ gNBs =
 
   #uplinkConfigCommon 
      #frequencyInfoUL
-      ul_frequencyBand                                                 = 261;
+      ul_frequencyBand                                                 = 257;
       #scs-SpecificCarrierList
       ul_offstToCarrier                                              = 0;
 # subcarrierSpacing
@@ -251,7 +251,7 @@ RUs = (
          max_rxgain                    = 75;
          eNB_instances  = [0];
 	 sdr_addrs = "addr=192.168.10.2,second_addr=192.168.20.2";
-         if_freq = 5124520000L;
+         if_freq = 5124565000L; # 512420000 + 45000 Hz (to match the freq offset from Interdigital MHU)
 	 clock_src = "external";
 	 time_src = "external";
     }
