--- a/targets/PROJECTS/GENERIC-LTE-EPC/CONF/testing_gnb.conf
+++ b/targets/PROJECTS/GENERIC-LTE-EPC/CONF/testing_gnb.conf
@@ -212,11 +212,11 @@ gNBs =
     {
 
         GNB_INTERFACE_NAME_FOR_S1_MME            = "eth0";
-        GNB_IPV4_ADDRESS_FOR_S1_MME              = "192.168.18.198/24";
+        GNB_IPV4_ADDRESS_FOR_S1_MME              = "192.168.18.196/24";
         GNB_INTERFACE_NAME_FOR_S1U               = "eth0";
-        GNB_IPV4_ADDRESS_FOR_S1U                 = "192.168.18.198/24";
+        GNB_IPV4_ADDRESS_FOR_S1U                 = "192.168.18.196/24";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
-        GNB_IPV4_ADDRESS_FOR_X2C                 = "192.168.18.198/24";
+        GNB_IPV4_ADDRESS_FOR_X2C                 = "192.168.18.196/24";
         GNB_PORT_FOR_X2C                         = 36422; # Spec 36422
     };
   }
@@ -247,8 +247,9 @@ RUs = (
          att_rx         = 0;
          bands          = [7];
          max_pdschReferenceSignalPower = -27;
-         max_rxgain                    = 114;
+         max_rxgain                    = 75;
          eNB_instances  = [0];
+         sdr_addrs = "addr=192.168.10.2,second_addr=192.168.20.2";
          clock_src = "external";
     }
 );  
