--- a/targets/PROJECTS/GENERIC-LTE-EPC/CONF/gnb.band261.tm1.32PRB.usrpn300.conf
+++ b/targets/PROJECTS/GENERIC-LTE-EPC/CONF/gnb.band261.tm1.32PRB.usrpn300.conf
@@ -39,7 +39,7 @@ gNBs =
       absoluteFrequencySSB                                          = 2071241;
       dl_frequencyBand                                                 = 261;
       # this is 27.900 GHz
-      dl_absoluteFrequencyPointA                                       = 2070833;
+      dl_absoluteFrequencyPointA                                       = 2070857;
       #scs-SpecificCarrierList
         dl_offstToCarrier                                              = 0;
 # subcarrierSpacing
@@ -54,7 +54,7 @@ gNBs =
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120  
         initialDLBWPsubcarrierSpacing                                           = 3;
       #pdcch-ConfigCommon
-        initialDLBWPcontrolResourceSetZero                                      = 12;
+        initialDLBWPcontrolResourceSetZero                                      = 0;
         initialDLBWPsearchSpaceZero                                             = 0;
       #pdsch-ConfigCommon
         #pdschTimeDomainAllocationList (up to 16 entries)
@@ -103,7 +103,7 @@ gNBs =
 #1=oneeighth,2=onefourth,3=half,4=one,5=two,6=four,7=eight,8=sixteen
         ssb_perRACH_OccasionAndCB_PreamblesPerSSB_PR                = 3;
 #oneHalf (0..15) 4,8,12,16,...60,64
-        ssb_perRACH_OccasionAndCB_PreamblesPerSSB                   = 7;
+        ssb_perRACH_OccasionAndCB_PreamblesPerSSB                   = 1;
 #ra_ContentionResolutionTimer
 #(0..7) 8,16,24,32,40,48,56,64
         ra_ContentionResolutionTimer                                = 7;
@@ -212,11 +212,11 @@ gNBs =
     {
 
         GNB_INTERFACE_NAME_FOR_S1_MME            = "eth0";
-        GNB_IPV4_ADDRESS_FOR_S1_MME              = "192.168.18.198/24";
+        GNB_IPV4_ADDRESS_FOR_S1_MME              = "192.168.18.196/24";
         GNB_INTERFACE_NAME_FOR_S1U               = "eth0";
-        GNB_IPV4_ADDRESS_FOR_S1U                 = "192.168.18.198/24";
+        GNB_IPV4_ADDRESS_FOR_S1U                 = "192.168.18.196/24";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
-        GNB_IPV4_ADDRESS_FOR_X2C                 = "192.168.18.198/24";
+        GNB_IPV4_ADDRESS_FOR_X2C                 = "192.168.18.196/24";
         GNB_PORT_FOR_X2C                         = 36422; # Spec 36422
     };
   }
@@ -250,7 +250,7 @@ RUs = (
          max_rxgain                    = 75;
          eNB_instances  = [0];
 	 sdr_addrs = "addr=192.168.10.2,second_addr=192.168.20.2";
-         if_freq = 5124520000L;
+         if_freq = 5124565000L; # 512420000 + 45000 Hz (to match the freq offset from Interdigital MHU)
 	 clock_src = "external";
 	 time_src = "external";
     }
