test ping ok with oai ue and cost ue

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpb210.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpb210.conf
@@ -12,20 +12,20 @@ gNBs =
     gNB_name  =  "gNB-Eurecom-5GNRBox";
 
     // Tracking area code, 0x0000 and 0xfffe are reserved values
-    tracking_area_code  =  1;
+    tracking_area_code  =  100;
     plmn_list = ({
-                  mcc = 208;
-                  mnc = 99;
+                  mcc = 460;
+                  mnc = 11;
                   mnc_length = 2;
                   snssaiList = (	
                     {	     
                       sst = 1;
-                      sd  = 0x010203; // 0 false, else true
-                    },
-                    {	
-                      sst = 1;
-                      sd  = 0x112233; // 0 false, else true
+                     #sd  = 0x010203; // 0 false, else true
                     }
+                   #{	
+                      #st = 1;
+                    # sd  = 0x112233; // 0 false, else true
+                    #
                   );
 
                   });
@@ -223,7 +223,7 @@ gNBs =
 
 
     ////////// MME parameters:
-    amf_ip_address      = ( { ipv4       = "192.168.69.131";
+    amf_ip_address      = ( { ipv4       = "192.168.199.211";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -245,12 +245,12 @@ gNBs =
 
     NETWORK_INTERFACES :
     {
-        GNB_INTERFACE_NAME_FOR_NG_AMF            = "eth0";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.18.198/24";
-        GNB_INTERFACE_NAME_FOR_NGU               = "eth0";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.18.198/24";
+        GNB_INTERFACE_NAME_FOR_NG_AMF            = "eno1";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.199.224/24";
+        GNB_INTERFACE_NAME_FOR_NGU               = "eno1";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.199.224/24";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
-        GNB_IPV4_ADDRESS_FOR_X2C                 = "192.168.18.198/24";
+        GNB_IPV4_ADDRESS_FOR_X2C                 = "192.168.199.224/24";
         GNB_PORT_FOR_X2C                         = 36422; # Spec 36422
     };
 
@@ -282,7 +282,7 @@ RUs = (
          att_rx         = 0;
          bands          = [7];
          max_pdschReferenceSignalPower = -27;
-         max_rxgain                    = 114;
+         max_rxgain                    = 120;
          eNB_instances  = [0];
          #beamforming 1x4 matrix:
          bf_weights = [0x00007fff, 0x0000, 0x0000, 0x0000];
