feat(ci): adding parser and git template yaml file
Signed-off-by: Raphael Defosseux <raphael.defosseux@eurecom.fr>

--- a/ci-scripts/python_v2/setup.cfg
+++ b/ci-scripts/python_v2/setup.cfg
@@ -7,8 +7,14 @@ ignore =
     WPS110, # Found wrong variable name
     WPS210, # Found too many local variables
     WPS219, # Found too deep access level
+    WPS226, # Found string constant over-use
     WPS306, # Found class without a base class
+    WPS317, # Found incorrect multi-line parameters
     WPS420, # Found wrong keyword
+    WPS421, # Found wrong function
+    # Darglint warnings
+    DAR003, # Incorrect indentation
+    DAR102, # Excess parameter(s) in Docstring
     # pydocstyle warnings
     D107,   # Missing docstring in __init_
     D2,     # White space formatting for doc strings
