--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.273PRB.notcenter.yunsdr.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.273PRB.notcenter.yunsdr.conf
@@ -32,13 +32,13 @@ gNBs =
 
     ////////// Physical parameters:
 
-    ssb_SubcarrierOffset                                      = 12;
+    ssb_SubcarrierOffset                                      = 0;
     pdsch_AntennaPorts                                        = 1;
     pusch_AntennaPorts                                        = 1;
 
      pdcch_ConfigSIB1 = (
       {
-        controlResourceSetZero = 12;
+        controlResourceSetZero = 10;     // 10->(48,12), 12->(48,16)
         searchSpaceZero = 0;
       }
       );
@@ -52,10 +52,10 @@ gNBs =
 #  downlinkConfigCommon
     #frequencyInfoDL
       # this is 3600 MHz + 43 PRBs@30kHz SCS (same as initial BWP)
-      absoluteFrequencySSB                                             = 641280;
+      absoluteFrequencySSB                                             =  629952;  /// 641280;
       dl_frequencyBand                                                 = 78;
       # this is 3600 MHz
-      dl_absoluteFrequencyPointA                                       = 638004; // 100M       640008; // 40M
+      dl_absoluteFrequencyPointA                                       =  629352;   ////638004; // 100M       640008; // 40M
       #scs-SpecificCarrierList
         dl_offstToCarrier                                              = 0;
 # subcarrierSpacing
