--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.yunsdrb210.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.yunsdrb210.conf
@@ -12,8 +12,8 @@ gNBs =
     // Tracking area code, 0x0000 and 0xfffe are reserved values
     tracking_area_code  =  1;
     plmn_list = ({
-                  mcc = 208;
-                  mnc = 99;
+                  mcc = 466;
+                  mnc = 11;
                   mnc_length = 2;
                   snssaiList = (
                     {
@@ -66,6 +66,8 @@ gNBs =
       #genericParameters
         # this is RBstart=27,L=48 (275*(L-1))+RBstart
         initialDLBWPlocationAndBandwidth                               = 12952; # 6366 12925 12956 28875 12952
+        # this is RBstart=0,L=106 (275*(L-1))+RBstart
+        #initialDLBWPlocationAndBandwidth                               = 28875; # 6366 12925 12956 28875 12952
 # subcarrierSpacing
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120
         initialDLBWPsubcarrierSpacing                                   = 1;
@@ -95,6 +97,7 @@ gNBs =
      #initialUplinkBWP
       #genericParameters
         initialULBWPlocationAndBandwidth                            = 12952;
+        #initialULBWPlocationAndBandwidth                            = 28875;
 # subcarrierSpacing
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120
         initialULBWPsubcarrierSpacing                               = 1;
@@ -106,7 +109,7 @@ gNBs =
           prach_msg1_FDM                                            = 0;
           prach_msg1_FrequencyStart                                 = 0;
           zeroCorrelationZoneConfig                                 = 13;
-          preambleReceivedTargetPower                               = -96;
+          preambleReceivedTargetPower                               = -66;
 #preamblTransMax (0...10) = (3,4,5,6,7,8,10,20,50,100,200)
           preambleTransMax                                          = 6;
 #powerRampingStep
@@ -149,14 +152,14 @@ gNBs =
         initialULBWPstartSymbolAndLength_2    = 52; # this is SS=10 L=4
 
         msg3_DeltaPreamble                                          = 1;
-        p0_NominalWithGrant                                         =-90;
+        p0_NominalWithGrant                                         =-60;
 
 # pucch-ConfigCommon setup :
 # pucchGroupHopping
 # 0 = neither, 1= group hopping, 2=sequence hopping
         pucchGroupHopping                                           = 0;
         hoppingId                                                   = 40;
-        p0_nominal                                                  = -90;
+        p0_nominal                                                  = -60;
 # ssb_PositionsInBurs_BitmapPR
 # 1=short, 2=medium, 3=long
       ssb_PositionsInBurst_PR                                       = 2;
@@ -248,7 +251,7 @@ RUs = (
        local_rf       = "yes"
          nb_tx          = 1
          nb_rx          = 1
-         att_tx         = 85
+         att_tx         = 85;
          att_rx         = 0;
          bands          = [7];
          max_pdschReferenceSignalPower = -27;
