--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.center.yunsdr.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.center.yunsdr.conf
@@ -32,7 +32,7 @@ gNBs =
 
     ////////// Physical parameters:
 
-    ssb_SubcarrierOffset                                      = 12;
+    ssb_SubcarrierOffset                                      = 0;
     pdsch_AntennaPorts                                        = 1;
     pusch_AntennaPorts                                        = 1;
 
@@ -55,17 +55,19 @@ gNBs =
       absoluteFrequencySSB                                             = 641280;
       dl_frequencyBand                                                 = 78;
       # this is 3600 MHz
-      dl_absoluteFrequencyPointA                                       = 638004; // 100M       640008; // 40M
+      dl_absoluteFrequencyPointA                                       = 640008;
       #scs-SpecificCarrierList
         dl_offstToCarrier                                              = 0;
 # subcarrierSpacing
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120
         dl_subcarrierSpacing                                           = 1;
-        dl_carrierBandwidth                                            = 273;
+        dl_carrierBandwidth                                            = 106;
      #initialDownlinkBWP
       #genericParameters
         # this is RBstart=27,L=48 (275*(L-1))+RBstart
-        initialDLBWPlocationAndBandwidth                               = 1099; // 12952; # 6366 12925 12956 28875 12952
+        #initialDLBWPlocationAndBandwidth                               = 12952; # 6366 12925 12956 28875 12952
+        # this is RBstart=0,L=106 (275*(L-1))+RBstart
+        initialDLBWPlocationAndBandwidth                               = 28875; # 6366 12925 12956 28875 12952
 # subcarrierSpacing
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120
         initialDLBWPsubcarrierSpacing                                   = 1;
@@ -90,11 +92,12 @@ gNBs =
 # subcarrierSpacing
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120
       ul_subcarrierSpacing                                          = 1;
-      ul_carrierBandwidth                                           = 273;
+      ul_carrierBandwidth                                           = 106;
       pMax                                                          = 20;
      #initialUplinkBWP
       #genericParameters
-        initialULBWPlocationAndBandwidth                            = 1099; //12952;
+        #initialULBWPlocationAndBandwidth                            = 12952;
+        initialULBWPlocationAndBandwidth                            = 28875;
 # subcarrierSpacing
 # 0=kHz15, 1=kHz30, 2=kHz60, 3=kHz120
         initialULBWPsubcarrierSpacing                               = 1;
@@ -149,14 +152,14 @@ gNBs =
         initialULBWPstartSymbolAndLength_2    = 52; # this is SS=10 L=4
 
         msg3_DeltaPreamble                                          = 1;
-        p0_NominalWithGrant                                         =-50;
+        p0_NominalWithGrant                                         =-60;
 
 # pucch-ConfigCommon setup :
 # pucchGroupHopping
 # 0 = neither, 1= group hopping, 2=sequence hopping
         pucchGroupHopping                                           = 0;
         hoppingId                                                   = 40;
-        p0_nominal                                                  = -50;
+        p0_nominal                                                  = -60;
 # ssb_PositionsInBurs_BitmapPR
 # 1=short, 2=medium, 3=long
       ssb_PositionsInBurst_PR                                       = 2;
@@ -204,7 +207,7 @@ gNBs =
 
 
     ////////// MME parameters:
-    amf_ip_address      = ( { ipv4       = "192.168.199.211";
+    amf_ip_address      = ( { ipv4       = "192.168.70.132";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -214,10 +217,10 @@ gNBs =
 
     NETWORK_INTERFACES :
     {
-        GNB_INTERFACE_NAME_FOR_NG_AMF            = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.199.225/24";
-        GNB_INTERFACE_NAME_FOR_NGU               = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.199.225/24";
+        GNB_INTERFACE_NAME_FOR_NG_AMF            = "demo-oai";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.70.129/24";
+        GNB_INTERFACE_NAME_FOR_NGU               = "demo-oai";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.70.129/24";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
@@ -248,7 +251,7 @@ RUs = (
        local_rf       = "yes"
          nb_tx          = 1
          nb_rx          = 1
-         att_tx         = 85
+         att_tx         = 85;
          att_rx         = 0;
          bands          = [7];
          max_pdschReferenceSignalPower = -27;
