config file changed

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.273PRB.center.yunsdr.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.273PRB.center.yunsdr.conf
@@ -10,7 +10,7 @@ gNBs =
     gNB_name  =  "gNB-Eurecom-5GNRBox";
 
     // Tracking area code, 0x0000 and 0xfffe are reserved values
-    tracking_area_code  =  1;
+    tracking_area_code  =  100;
     plmn_list = ({
                   mcc = 466;
                   mnc = 11;
@@ -18,12 +18,13 @@ gNBs =
                   snssaiList = (
                     {
                       sst = 1;
-                      sd  = 0x1; // 0 false, else true
-                    },
-                    {
-                      sst = 1;
-                      sd  = 0x112233; // 0 false, else true
+                    #  sd  = 0x1; // 0 false, else true
                     }
+	            #,
+                    #{
+                    #  sst = 1;
+                    # sd  = 0x112233; // 0 false, else true
+                    #}
                   );
 
                   });
