--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.273PRB.center.yunsdr.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.273PRB.center.yunsdr.conf
@@ -81,7 +81,7 @@ gNBs =
 
         initialDLBWPk0_1                    = 0;  #for mixed slot
         initialDLBWPmappingType_1           = 0;
-        initialDLBWPstartSymbolAndLength_1  = 57; #this is SS=1,L=5
+        initialDLBWPstartSymbolAndLength_1  = 57; #this is SS=1,L=13 #57; #this is SS=1,L=5
 
   #uplinkConfigCommon
      #frequencyInfoUL
@@ -150,14 +150,14 @@ gNBs =
         initialULBWPstartSymbolAndLength_2    = 52; # this is SS=10 L=4
 
         msg3_DeltaPreamble                                          = 1;
-        p0_NominalWithGrant                                         =-50;
+        p0_NominalWithGrant                                         =-60;
 
 # pucch-ConfigCommon setup :
 # pucchGroupHopping
 # 0 = neither, 1= group hopping, 2=sequence hopping
         pucchGroupHopping                                           = 0;
         hoppingId                                                   = 40;
-        p0_nominal                                                  = -50;
+        p0_nominal                                                  = -60;
 # ssb_PositionsInBurs_BitmapPR
 # 1=short, 2=medium, 3=long
       ssb_PositionsInBurst_PR                                       = 2;
@@ -230,7 +230,7 @@ MACRLCs = (
         num_cc                      = 1;
         tr_s_preference             = "local_L1";
         tr_n_preference             = "local_RRC";
-        ulsch_max_slots_inactivity  = 100;
+        ulsch_max_slots_inactivity  = 20; #100;
         pusch_TargetSNRx10          = 200;
         pucch_TargetSNRx10          = 200;
     }
@@ -249,11 +249,11 @@ RUs = (
        local_rf       = "yes"
          nb_tx          = 1
          nb_rx          = 1
-         att_tx         = 85
+         att_tx         = 75
          att_rx         = 0;
          bands          = [7];
          max_pdschReferenceSignalPower = -27;
-         max_rxgain                    = 114;
+         max_rxgain                    = 80;
          eNB_instances  = [0];
          #beamforming 1x4 matrix:
          bf_weights = [0x00007fff, 0x0000, 0x0000, 0x0000];
